deploy/phibek/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: phibek-portal
  namespace: istio-system
spec:
  hostnames:
    - istio.k-lynx.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ingressgateway
      namespace: istio-system
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /gateway
      backendRefs:
        - group: ""
          kind: Service
          name: gateway-portal
          namespace: phibek
          port: 3000
          weight: 1
